# markdown-splitting-and-hallucination-reduction

./: .gitignore  README.md  custom_header_detection.py  docker-compose.yml  extracted_markdown.md  mark_and_chunk.py  pymu4llm_custom_header_detection.py  pyproject.toml
