[tool.poetry]
name = "markdown-splitting-and-hallucination-reduction"
version = "0.1.0"
description = ""
authors = ["Luka-Radulovic <lukaradulovikj@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pdfplumber = "^0.11.6"
langchain = "^0.3.25"
langchain-ollama = "^0.3.3"
langchain-community = "^0.3.24"
sentence-transformers = "^4.1.0"
ipykernel = "^6.29.5"
markdownify = "^1.1.0"
pymupdf = "^1.25.5"
pymupdf4llm = "^0.0.24"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
